# mitotrain

./: .gitignore  LICENSE  README.md  explore.py  inspect_binarization.py  inspect_holdout.py  inspect_mito_seg.py  inspect_roi.py  predict.py  pyproject.toml  requirements.txt  train.py
.claude/: settings.local.json
data/: loader.py  sampler.py
docs/: CONCEPT_DOWNSAMPLING_AND_CHUNKS.md  INSPECT_MITO_SEG.md  LESSONS_LEARNED.md  PLANNING.md  PRE_SPRINT_2_INSPECTION.md  SPRINT_0.md  SPRINT_0_SUMMARY.md  SPRINT_1.md  SPRINT_1_RESEARCH.md  SPRINT_1_SUMMARY.md  SPRINT_2.md  SPRINT_2_SUMMARY.md  SPRINT_3.md  SPRINT_3_SUMMARY.md  SPRINT_4.md  SPRINT_4_1.md  SPRINT_4_1_SUMMARY.md  SPRINT_4_2.md  SPRINT_4_2_SUMMARY.md  SPRINT_4_SUMMARY.md  SPRINT_5.md  SPRINT_5_SUMMARY.md  TODO_ENHANCEMENTS.md
model/: unet.py
outputs/: loss_log.txt
utils/: visualize.py
